# arcaflow-plugin-horreum-client

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  workflow.yaml
arcaflow_plugin_horreum_client/: horreum_client_plugin.py  horreum_client_schema.py
configs/: sample-input.yaml
inputs/: sample-input.yaml
tests/: test_arcaflow_plugin_horreum_client.py
