[tool.poetry]
name = "arcaflow-plugin-horreum-client"
version = "0.1.0"
description = "arcaflow plugin for horreum client"
authors = ["Arcalot"]
license = "Apache-2.0+GPL-2.0-only"

packages = [
   { include="horreum_client_plugin.py", from="./arcaflow_plugin_horreum_client"  },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.14.0"
requests = "~2.32.0"
responses = "~0.25.0"

[tool.poetry.dev-dependencies]
docformatter = "1.7.5"
autoflake = "2.3.1"
pydocstyle = "6.3.0"
black = "24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
